# oneclick-ai

./: .coderabbit.yaml  .e2e_agent1  .e2e_jwt1  .e2e_user1  .env.example  .gitignore  CONTEXT_HANDOFF.md  README.md  context_bank.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  e2e_ws_test.py  run_e2e.py  start.sh  stop.sh
.context_bank/: README.md  setup.md
.context_bank/product/: decisions.md  roadmap.md  vision.md
.context_bank/technical/: architecture.md  decisions.md  guidelines.md  infrastructure.md
.context_bank/technical/modules/: agent-tools.md  api.md  llm-proxy.md  message-queue.md  monitor.md  notifications.md  orchestrator.md  scheduler.md  shared.md  webhook-receiver.md
.github/workflows/: copilot-setup-steps.yml
agent-runtime/: Dockerfile  chat-bridge.js  docker-compose.yml  entrypoint.sh  pair-device.js
backend/: Cargo.toml  Dockerfile
backend/crates/agent-tools/: Cargo.toml
backend/crates/agent-tools/plugin/: oneclick-tools.js
backend/crates/agent-tools/src/: lib.rs  tools.rs
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  state.rs  swagger.rs
backend/crates/api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
backend/crates/api/src/routes/: agent_ui.rs  agents.rs  auth.rs  chat.rs  internal.rs  mod.rs  notifications.rs  schedules.rs  usage.rs
backend/crates/llm-proxy/: Cargo.toml
backend/crates/llm-proxy/src/: lib.rs  provider.rs  service.rs  types.rs
backend/crates/message-queue/: Cargo.toml
backend/crates/message-queue/src/: lib.rs
backend/crates/monitor/: Cargo.toml
backend/crates/monitor/src/: lib.rs  service.rs
backend/crates/notifications/: Cargo.toml
backend/crates/notifications/src/: lib.rs  service.rs
backend/crates/orchestrator/: Cargo.toml
backend/crates/orchestrator/src/: firecracker_runtime.rs  lib.rs  runtime.rs  service.rs  tap_manager.rs
backend/crates/scheduler/: Cargo.toml
backend/crates/scheduler/src/: cron_utils.rs  lib.rs  service.rs
backend/crates/shared/: Cargo.toml
backend/crates/shared/src/: auth.rs  config.rs  cron.rs  db.rs  errors.rs  lib.rs  redis.rs
backend/crates/shared/src/models/: agent.rs  chat_message.rs  message.rs  mod.rs  notification.rs  schedule.rs  usage.rs  user.rs
backend/crates/webhook-receiver/: Cargo.toml
backend/crates/webhook-receiver/src/: lib.rs
backend/migrations/: 20250101000001_create_users.sql  20250101000002_create_agents.sql  20250101000003_create_scheduled_jobs.sql  20250101000004_create_usage.sql  20250101000005_create_message_queue.sql  20250101000006_create_notifications.sql  20250101000007_create_chat_messages.sql
backend/src/: main.rs
backend/tests/: api_integration.rs  e2e_firecracker.rs  e2e_workflow.rs  run_e2e.sh
backend/tests/common/: mod.rs
docs/: README.md
docs/architecture/: firecracker.md  system-overview.md  technology-choices.md
docs/decisions/: 001-rust-backend.md  002-docker-runtime-abstraction.md  003-scale-to-zero.md  004-external-scheduler.md  005-llm-proxy.md  006-no-litellm.md  007-no-firecracker-phase1.md  008-free-tier-providers.md  009-testing-strategy.md  010-telemetry.md
docs/new_machine_setup/: new_linux_machine.md  new_macos_machine.md
docs/phase1/: api-reference.md  build-spec.md  database-schema.md  deployment.md  telemetry.md  testing.md
docs/temp/: new-machine-setup.md  stage3-plan.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AdminLayout.tsx  AppLayout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  LoginPage.tsx  NotificationsPage.tsx  SchedulesPage.tsx  SignupPage.tsx  UsagePage.tsx
frontend/src/pages/admin/: AdminAgentsPage.tsx  AdminAnalyticsPage.tsx  AdminHealthPage.tsx  AdminUsersPage.tsx
local_poc/: README.md  start.sh
local_poc/agent-runtime/: .env.example  Dockerfile  README.md  entrypoint.sh  oneclick-tools.js
local_poc/firecracker/: .gitignore  Cargo.toml  README.md
local_poc/firecracker/scripts/: build-rootfs-openclaw.sh  build-rootfs-template.sh  build-rootfs.sh  setup-network.sh
local_poc/firecracker/src/: main.rs
local_poc/oneclick-runtime/: Dockerfile  README.md  docker-compose.multi.yml
local_poc/scripts/: agent.sh  setup.sh
monitoring/: prometheus.yml
new_machine_setup/: new_linux_machine.md  new_macos_machine.md
oneclick-runtime/: chat-bridge.js
scripts/: agent.sh
scripts/firecracker/: README.md  build-rootfs.sh  teardown-network.sh
scripts/server/: start.sh  stop.sh
scripts/setup/: clean_setup.sh
