[package]
name = "firecracker-poc"
version = "0.2.0"
edition = "2021"

[dependencies]
# fctools — official Firecracker Rust SDK from rust-firecracker org
fctools = { version = "0.7.0-alpha.1", features = [
    "vm",
    "unrestricted-vmm-executor",
    "elevation-process-spawners",
    "tokio-runtime",
    "nix-syscall-backend",
] }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Kept for the `stop` command's cross-process HTTP helper.
# In production (long-running backend), fctools Vm struct lives in memory,
# so these won't be needed.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
