[package]
name = "oneclick-api"
version.workspace = true
edition.workspace = true

[dependencies]
oneclick-shared = { path = "../shared" }
axum.workspace = true
axum-extra.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
