[package]
name = "oneclick-llm-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
oneclick-shared = { path = "../shared" }
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
futures-util.workspace = true
