[package]
name = "oneclick-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
oneclick-shared = { path = "../shared" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true
