[package]
name = "oneclick-shared"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
sqlx.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
dotenvy.workspace = true
tracing.workspace = true
