[package]
name = "oneclick-webhook-receiver"
version.workspace = true
edition.workspace = true

[dependencies]
oneclick-shared = { path = "../shared" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
